fixed network issues after breaking phisical link

--- a/roles/powertop/templates/powertop.service.j2
+++ b/roles/powertop/templates/powertop.service.j2
@@ -8,9 +8,15 @@ After=network-online.target
 Type=oneshot
 RemainAfterExit=yes
 ExecStart=/usr/sbin/powertop --auto-tune
+# NIC power saving causes interfaces not to go up after going down (recabling, switch reboot, etc.)
+# Disable power saving as in following example:
+# ExecStart=/bin/sh -c "echo 'on' > /sys/bus/pci/devices/0000:00:1c.6/power/control"
 {% if ansible_facts.hostname == 'bagel' %}
-# Following line is a workaround for NIC interruptions issue
-ExecStart=/bin/sh -c "echo 'on' > /sys/bus/pci/devices/0000:00:1c.6/power/control"
+ExecStart=/bin/sh -c "echo on > /sys/bus/pci/devices/0000:00:1c.6/power/control"
+{% elif ansible_facts.hostname == 'challah' %}
+ExecStart=/bin/sh -c "echo on > /sys/bus/pci/devices/0000:00:1f.6/power/control"
+{% elif ansible_facts.hostname == 'obwarzanek' %}
+ExecStart=/bin/sh -c "echo on > /sys/bus/pci/devices/0000:02:00.0/power/control"
 {% endif %}
 
 [Install]
