--- a/roles/htop/templates/htoprc.j2
+++ b/roles/htop/templates/htoprc.j2
@@ -31,7 +31,10 @@ color_scheme=0
 enable_mouse=1
 delay=15
 hide_function_bar=0
-{% if ansible_facts.processor_vcpus > 4 %}
+{% if ansible_facts.processor_vcpus > 10 %}
+header_layout=three_50_25_25
+column_meters_0=AllCPUs4 CPU
+{% if ansible_facts.processor_vcpus > 5 %}
 header_layout=three_50_25_25
 column_meters_0=AllCPUs2 CPU
 {% else %}
